Hey I added an H2 on line 9-11

--- a/nathan.html
+++ b/nathan.html
@@ -6,5 +6,8 @@
 <body>
 
 <h1>Nathan</h1>
+<!-- Vikrant's Edits Starts -->
+<h2>Hey I have added this line here</h2> 
+<!-- Vikrant's Edits End -->
 </body>
 </html>
