--- a/nathan.html
+++ b/nathan.html
@@ -8,6 +8,13 @@
 <h1>Nathan</h1>
 <!-- Vikrant's Edits Starts -->
 <h2>Hey I have added this line here</h2> 
+
+<?
+
+error
+
+
+?>
 <!-- Vikrant's Edits End -->
 </body>
 </html>
